WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
174142
When dragging a selection, clearing the selection in dragstart should not crash the web process
https://bugs.webkit.org/show_bug.cgi?id=174142
Summary
When dragging a selection, clearing the selection in dragstart should not cra...
Wenson Hsieh
Reported
2017-07-04 16:30:16 PDT
Test case: <meta name="viewport" content="width=device-width, initial-scale=1"> <code><p id="paragraph" style="font-size: 100px;">START DRAGGING</p></code> <script> function select(node) { let range = document.createRange(node); range.setStartBefore(node); range.setEndAfter(node); getSelection().removeAllRanges(); getSelection().addRange(range); } select(paragraph.childNodes[0]); document.body.addEventListener("dragstart", () => { getSelection().removeAllRanges(); paragraph.textContent = "PASS"; paragraph.style.color = "green"; }); </script>
Attachments
Patch
(10.06 KB, patch)
2017-07-04 17:04 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2017-07-04 16:34:53 PDT
<
rdar://problem/33067501
>
Wenson Hsieh
Comment 2
2017-07-04 17:04:36 PDT
Created
attachment 314586
[details]
Patch
WebKit Commit Bot
Comment 3
2017-07-05 13:32:45 PDT
Comment on
attachment 314586
[details]
Patch Clearing flags on attachment: 314586 Committed
r219153
: <
http://trac.webkit.org/changeset/219153
>
WebKit Commit Bot
Comment 4
2017-07-05 13:32:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug